add sign up + home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="flex items-center h-20 w-full bg-black1 px-11">
 	<a routerLink="/">
-		<img src="assets/icons/zcl-platform.svg" alt="zcl-platform" />
+		<img src="assets/icons/zcl-icon.svg" alt="zcl-platform" />
 	</a>
+	<p class="ml-2 text-xl text-white font-bold">ZCL Platform</p>
 </div>
 <router-outlet></router-outlet>
