--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-	<div class="mt-16 flex justify-between items-center px-48">
+	<div class="py-16 flex justify-between px-36">
 		<img
-			class="w-[34vw] h-[26vw]"
+			class="mt-24 w-[34vw] h-[26vw]"
 			src="assets/images/sign-in-banner.png"
 			alt="sign-in-banner"
 		/>
@@ -12,7 +12,7 @@
 					<p class="mb-2 text-black1 font-medium">Username</p>
 					<input
 						type="text"
-						class="w-full h-11 border rounded-lg border-gray1 px-4 py-3"
+						class="w-full h-10 border rounded-lg border-gray1 px-4 py-3"
 						placeholder="you@company.com"
 					/>
 				</div>
@@ -21,11 +21,11 @@
 					<div class="relative">
 						<input
 							[type]="showPassword ? 'text' : 'password'"
-							class="w-full h-11 border rounded-lg border-gray px-4 py-3"
+							class="w-full h-10 border rounded-lg border-gray px-4 py-3"
 							placeholder="Enter your password"
 						/>
 						<div
-							class="absolute right-3 top-3 w-5 h-5"
+							class="absolute right-3 top-3 w-5 h-5 cursor-pointer"
 							(click)="showPassword = !showPassword"
 						>
 							<img
@@ -44,7 +44,9 @@
 						Forgot password?
 					</p>
 				</div>
-				<button class="h-11 w-full rounded-lg bg-blue1 text-white font-medium">
+				<button
+					class="h-10 w-full rounded-lg bg-blue1 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 text-white font-medium"
+				>
 					Sign in
 				</button>
 				<div class="mt-4 flex gap-1">
