--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 	<div class="flex justify-between items-center">
 		<p class="text-2xl font-bold">My Apps</p>
 		<button
-			class="h-10 px-4 rounded-lg bg-blue1 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 text-white font-medium"
+			class="h-10 px-4 rounded-lg bg-blue1 hover:bg-blue-800 focus:ring-2 focus:ring-blue-300 text-white font-medium"
 		>
 			Create App
 		</button>
@@ -42,13 +42,13 @@
 		>
 			<div>
 				<div class="flex justify-between">
-					<div [routerLink]="'/application/' + item.id">
+					<a [routerLink]="'/application/' + item.id + '/buzz'">
 						<img
 							class="w-14 h-14 cursor-pointer"
 							src="{{ 'assets/images/app-' + item?.src + '.png' }}"
 							alt="app-img"
 						/>
-					</div>
+					</a>
 					<div>
 						<img
 							class="cursor-pointer"
